--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,9 @@ margin: 10px 17px 0;
 }
 .article-text-1{
 	margin-bottom: 22px;
-}
+
+font-family: "BPG Nino Mtavruli Bold", sans-serif;
+font-family: 'Roboto', sans-serif;}
 /*contact start*/
 section {
 	background-color: lightgray;
